test/types/coerce/ferguson/no-coerce.good
no-coerce.chpl:22: error: type mismatch in assignment from R to int(64)
